--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -8,9 +8,11 @@ body {
 }
 
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 60px;
-    text-align: center;
-    background: #13293d;
+    background-color: #13293d;
     color: #fff;
 }
 
