--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
     margin: 0;
 }
 
@@ -18,5 +18,16 @@ header {
 
 h1 {
     font-size: 200%;
+}
+
+h2 {
+    margin: 2% 0;
+    font-size: 250%;
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-between;
+    min-width: 300px;
 }
 
