--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -3,6 +3,9 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    line-height: 1.3;
     font-family: Arial;
     margin: 0;
 }
@@ -11,7 +14,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 60px;
+    padding: 1%;
     background-color: #13293d;
     color: #fff;
 }
@@ -31,3 +34,12 @@ nav ul {
     min-width: 300px;
 }
 
+nav a {
+    color: #b9C6ae;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: #fff;
+}
