--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -15,7 +15,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 1%;
-    background-color: #13293d;
+    background-color: #064286;
     color: #fff;
 }
 
