--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -11,16 +11,16 @@ body {
 }
 
 .header {
-    display: flex;
-    padding: 20px;
+    /*display: flex;*/
+    padding: 10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #064286;
+    background-color: #2a607c;
     color: #fff;
 }
 
 .header h1 {
     display: inline-flex;
-    font-size: 48px;
+    font-size: 38px;
 }
 
 .header div {
