--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -8,6 +8,7 @@ body {
     line-height: 1.3;
     font-family: Arial;
     margin: 0;
+    background-color: #c1e2f3;
 }
 
 .header {
@@ -32,10 +33,9 @@ body {
 }
 
 .header div ul {
-    list-style-type: none;
-  /*  display: flex;
+    display: flex;
     justify-content: space-between;
-    min-width: 300px; */
+    min-width: 300px;
 }
 
 .header div ul li {
@@ -57,10 +57,19 @@ p {
     font-size: 16px;
 }
 
-h2 {
+.hero {
+    height: 400px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/headerV1-image.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+/*h2 {
     margin: 2% 0;
     font-size: 250%;
-}
+}*/
 
 .float-left {
     float: left;
