--- a/asset/css/reset.css
+++ b/asset/css/reset.css
@@ -14,8 +14,12 @@
     font-family: sans-serif;
   }
   
-  h1, h2, h3, h4, h5, h6 {
+  h1, h3, h4, h5, h6 {
     font-size: 100%;
+  }
+
+  h2 {
+    font-size: 250%;
   }
   
   input, select, option, optgroup, textarea, button,
