--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,19 +1,17 @@
 * {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;  
+    
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    line-height: 1.3;
-    font-family: Arial;
-    margin: 0;
     background-color: #c1e2f3;
 }
 
 .header {
-    /*display: flex;*/
-    padding: 10px;
+    display: flex;
+    padding: 15px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #fff;
@@ -25,6 +23,7 @@ body {
 }
 
 .header div {
+    display: flex;
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -33,14 +32,14 @@ body {
 }
 
 .header div ul {
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
     min-width: 300px;
 }
 
 .header div ul li {
     display: inline-block;
-    margin-left: 25px;
+    margin-left: 20px;
 }
 
 a {
@@ -66,11 +65,6 @@ p {
     background-position: center;
 }
 
-/*h2 {
-    margin: 2% 0;
-    font-size: 250%;
-}*/
-
 .float-left {
     float: left;
     margin-right: 25px;
@@ -80,13 +74,11 @@ p {
     float: right;
     margin-left: 25px;
 }
-/*section ul {
-    text-align: center;
-}*/
 
 .content {
     width: 75%;
-    display: inline-block;
+    display: inline-flexbox;
+    /*display: inline-block;*/
     margin-left: 20px;
 }
 
@@ -115,6 +107,21 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2a607c;
     color: #fff;
+}
+
+.profile h2 {
+    margin-bottom: 20px;
+    font-size: 250%;
+}
+
+.skills h2 {
+    margin-bottom: 20px;
+    font-size: 250%;
+}
+
+.education h2 {
+    margin-bottom: 20px;
+    font-size: 250%;
 }
 
 .caracteristics {
