update flex features

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -11,6 +11,8 @@ body {
 
 .header {
     display: flex;
+    justify-content: space-between;
+    flex: 1;
     padding: 15px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -87,6 +89,9 @@ p {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
+    @media only screen and (max-width: 850px) {
+        height: 450px;
+    }
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2a607c;
     color: #fff;
@@ -137,7 +142,15 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2a607c;
+    background-color: #2a607c;   
+    @media only screen and (max-width: 850px) {
+        flex-direction: row;
+        width: 100%;
+        margin-right: 0px;
+        margin-left: 20px;
+        margin-right: 20px;
+        float: none;
+    }
 }
 
 .caracteristics-profile {
